--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <select name="football" id="teamlist">
     </select>
     <script src="./scripts/index.js"></script>
+    
+    <div>
+    <br>
+    <input type="button" id="selectionBtn" value="Select Button">
+    
+    </div>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
